--- a/CSS/index.css
+++ b/CSS/index.css
@@ -71,6 +71,104 @@ html,body{
     height: 50%;
 }
 /*****************************************************************************************************/
+/*=============================Booking=============================*/
+.booking .book-form{
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.411);
+    border-radius: 30px;
+  }
+  
+  .booking .book-form .flex{
+    display: flex; 
+    flex-wrap: wrap; 
+    gap: 2rem;
+  }
+  
+  .input{
+    border-radius: 10px;
+  }
+  
+  .inputbox{
+    font-family: "Poetsen One", sans-serif;
+  }
+  
+  .booking .book-form .flex .inputbox{
+    flex: 1 1 41rem;
+  }
+  
+  .booking .book-form .flex .inputbox input{
+    width: 100%;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.6rem;
+    color: var(--light-black);
+    text-transform: none;
+    margin-top: 1.5rem;
+    border: var(--border);
+  }
+  
+  .booking .book-form .flex .inputbox input:focus{
+    background: var(--black);
+    color: var(--white);
+  }
+  
+  .booking .book-form .flex .inputbox input:focus::placeholder{
+    color: var(--light-white);
+  }
+  
+  .booking .book-form .flex .inputbox span{
+    font-size: 1.5rem;
+    color: var(--light-black);
+  }
+  
+  .booking .book-form .btn{
+    margin-top: 50px;
+  }
+  
+  .btn{
+    display: inline-block;
+    background: var(--black);
+    margin-top: 1rem;
+    color: var(--white);
+    font-size: 1.7rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: "Poetsen One", sans-serif;
+  }
+  .btn:hover{
+    background-color: #00FFC2;
+  }
+  
+  .heading-title {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 5rem;
+    text-transform: uppercase;
+    color: #00FFC2;
+    font-family: "Poetsen One", sans-serif;
+    animation: fadeIn .6s linear backwards .6s;
+    -webkit-text-stroke: rgba(0, 0, 0, 0.515) 0.5px;
+  }
+  
+  @keyframes fadeIn {
+    0%{
+      transform: scale(0);
+      opacity: 0;
+    }
+  }
+  /*=============================Banner=============================*/
+  
+  .banner-video {
+    position: absolute;
+    top: 80%;
+    left: 36.7%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+  }
 /*header*/
 header {
     background-color: #8AA29E;
