--- a/CSS/index.css
+++ b/CSS/index.css
@@ -516,6 +516,18 @@ footer{
     margin-top: 5%;
 }
 
+.login-forgot-password-button {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-family: "Poetsen One", sans-serif;
+    font-size: 150%;
+    border: none;
+    outline: none;
+    padding: 3% 10%;
+    border-radius: 30px;
+}
+
 .login-signup-button {
     background-color: white;
     color: black;
