--- a/CSS/OverOns.css
+++ b/CSS/OverOns.css
@@ -195,3 +195,22 @@ header h1 {
     width: 90%;
     background-color: #E3F2FD;
 }
+
+/*------------------------Scroll Bar-----------------------*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #DB5461;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #DB5461;
+} 
