--- a/CSS/index.css
+++ b/CSS/index.css
@@ -324,7 +324,7 @@ html,body{
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-top: 5%;
+    margin: 2%;
 }
 
 .login-forgot-password-button {
@@ -365,15 +365,15 @@ html,body{
 .signup-form-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 3%;
+    margin-bottom: 0%;
 } 
 
 .signup-form-box {
     width: 40%;
     height: 90%;
     background-color: #DB5461;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     border-radius: 5%;
     border: 2px solid white;
     opacity: 95%;
