--- a/CSS/index.css
+++ b/CSS/index.css
@@ -669,3 +669,83 @@ button:hover {
       opacity: 0;
     }
   }
+
+  /* booking */
+
+.book-form {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f2f2f293;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 10%;
+  margin-bottom: 28%;
+}
+
+.book-form .flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+span{
+  font-family: "Poetsen One", sans-serif;
+}
+
+.book-form .inputbox {
+  flex-basis: calc(50% - 10px);
+  margin-bottom: 20px;
+}
+
+.book-form .inputbox span {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.book-form .input {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.book-form .btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #3AFFB8;
+  color: blakc;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.book-form .btn:hover {
+  background-color: #3AFFB8;
+}
+
+
+/*------------------------Scroll Bar-----------------------*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #DB5461;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #DB5461;
+} 
